{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 499,
  "lineage": "ea625591-685c-90e5-2606-a258e2d0fe31",
  "resources": [
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:137671803974:instance/i-028ebc5a7631e6f90",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028ebc5a7631e6f90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypro",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0609e3419587cc997",
            "private_dns": "ip-192-168-2-78.us-east-2.compute.internal",
            "private_ip": "192.168.2.78",
            "public_dns": "ec2-18-219-52-190.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.52.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-083657f8d6664f7b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042ba5cc8ec773979",
            "tags": {
              "Name": "Doan Bastion"
            },
            "tags_all": {
              "Name": "Doan Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dac1db24d8313f6"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.awsgrp3",
            "module.vpc.aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08460f912ef1db3a1",
            "arn": "arn:aws:ec2:us-east-2:137671803974:instance/i-0dd294fac16928f8d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd294fac16928f8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypro",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0967e0ea8d93aae74",
            "private_dns": "ip-192-168-1-91.us-east-2.compute.internal",
            "private_ip": "192.168.1.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b03061e4edc065c0",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c862938e444fe7ab",
            "tags": {
              "Name": "Doan MySQl"
            },
            "tags_all": {
              "Name": "Doan MySQl"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05054724d6d67eb5c",
              "sg-0c061a6596793bb35"
            ]
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_security_group.awsgrp2",
            "module.vpc.aws_security_group.awsgrp4",
            "module.vpc.aws_subnet.private-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05325fbe69c657918",
            "arn": "arn:aws:ec2:us-east-2:137671803974:instance/i-066fa79f70ac2760d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066fa79f70ac2760d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypro",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0585579df8ecd1530",
            "private_dns": "ip-192-168-2-224.us-east-2.compute.internal",
            "private_ip": "192.168.2.224",
            "public_dns": "ec2-3-22-249-105.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.249.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-045fd09cf79fbf966",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042ba5cc8ec773979",
            "tags": {
              "Name": "Doan Word Press  Webserver"
            },
            "tags_all": {
              "Name": "Doan Word Press  Webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-087cd88a709c8d1f8"
            ]
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_security_group.awsgrp1",
            "module.vpc.aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0021777884b5b90c6",
            "association_id": "eipassoc-07b98b6dac4c802fd",
            "domain": "vpc",
            "id": "eipalloc-0021777884b5b90c6",
            "network_border_group": "us-east-2",
            "network_interface": "eni-041afb510d9e61d4f",
            "private_dns": "ip-192-168-2-82.us-east-2.compute.internal",
            "private_ip": "192.168.2.82",
            "public_dns": "ec2-3-15-76-36.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.76.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137671803974:internet-gateway/igw-04c0e8bbb8af367e9",
            "id": "igw-04c0e8bbb8af367e9",
            "owner_id": "137671803974",
            "tags": {
              "Name": "Doan-IGW"
            },
            "tags_all": {
              "Name": "Doan-IGW"
            },
            "vpc_id": "vpc-02475f25f8fbfbb50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0021777884b5b90c6",
            "connectivity_type": "public",
            "id": "nat-07f9ed09177fae1cf",
            "network_interface_id": "eni-041afb510d9e61d4f",
            "private_ip": "192.168.2.82",
            "public_ip": "3.15.76.36",
            "subnet_id": "subnet-042ba5cc8ec773979",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137671803974:route-table/rtb-09266be88b0a924be",
            "id": "rtb-09266be88b0a924be",
            "owner_id": "137671803974",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07f9ed09177fae1cf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Doan-Private Route Table"
            },
            "tags_all": {
              "Name": "Doan-Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02475f25f8fbfbb50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137671803974:route-table/rtb-0980710bcbd672b8d",
            "id": "rtb-0980710bcbd672b8d",
            "owner_id": "137671803974",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c0e8bbb8af367e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Doan-Public Route Table"
            },
            "tags_all": {
              "Name": "Doan-Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02475f25f8fbfbb50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c71c55b62b7a105",
            "route_table_id": "rtb-0980710bcbd672b8d",
            "subnet_id": "subnet-042ba5cc8ec773979"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awsgrp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137671803974:security-group/sg-087cd88a709c8d1f8",
            "description": "allow http,ssh,https wordpress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087cd88a709c8d1f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "awsgrp1",
            "name_prefix": "",
            "owner_id": "137671803974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow internet"
            },
            "tags_all": {
              "Name": "allow internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-02475f25f8fbfbb50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awsgrp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137671803974:security-group/sg-05054724d6d67eb5c",
            "description": "Database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05054724d6d67eb5c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087cd88a709c8d1f8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database",
            "name_prefix": "",
            "owner_id": "137671803974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SQL"
            },
            "tags_all": {
              "Name": "SQL"
            },
            "timeouts": null,
            "vpc_id": "vpc-02475f25f8fbfbb50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.awsgrp1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awsgrp3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137671803974:security-group/sg-05dac1db24d8313f6",
            "description": "allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dac1db24d8313f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow ssh",
            "name_prefix": "",
            "owner_id": "137671803974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh"
            },
            "tags_all": {
              "Name": "allow ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-02475f25f8fbfbb50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awsgrp4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137671803974:security-group/sg-0c061a6596793bb35",
            "description": "ssh bastion only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c061a6596793bb35",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05dac1db24d8313f6"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh bastion only",
            "name_prefix": "",
            "owner_id": "137671803974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh bastion only"
            },
            "tags_all": {
              "Name": "ssh bastion only"
            },
            "timeouts": null,
            "vpc_id": "vpc-02475f25f8fbfbb50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_security_group.awsgrp3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137671803974:subnet/subnet-0c862938e444fe7ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0c862938e444fe7ab",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137671803974",
            "tags": {
              "Name": "Doan-Private Subnet "
            },
            "tags_all": {
              "Name": "Doan-Private Subnet "
            },
            "vpc_id": "vpc-02475f25f8fbfbb50"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137671803974:subnet/subnet-042ba5cc8ec773979",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-042ba5cc8ec773979",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137671803974",
            "tags": {
              "Name": "Doan-Public Subnet "
            },
            "tags_all": {
              "Name": "Doan-Public Subnet "
            },
            "vpc_id": "vpc-02475f25f8fbfbb50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137671803974:vpc/vpc-02475f25f8fbfbb50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02e7fde974682b7df",
            "default_route_table_id": "rtb-0a50204d2728ff0b1",
            "default_security_group_id": "sg-0d65b788efc78db4f",
            "dhcp_options_id": "dopt-055c992cc73a7c7c3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02475f25f8fbfbb50",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a50204d2728ff0b1",
            "owner_id": "137671803974",
            "tags": {
              "Name": "Doan-VPC"
            },
            "tags_all": {
              "Name": "Doan-VPC"
            }
          }
        }
      ]
    }
  ]
}